# Benchmark_Evaluation_of_Unsupervised_Domain_Adaptive_Object_Detectors_in_Foggy_UAV_Environments

./: UIT-Drone -> UIT-Drone-Foggy Experiments.xlsx
BiADT/: engine.py  main.py  requirements.txt  test.sh  test_aqt.sh  train.sh
BiADT/datasets/: __init__.py  cityscapes.py  coco.py
BiADT/util/: coco_id2name.json  visualizer.py
DA2OD/: README.md  pyproject.toml
DA2OD/configs/bdd100k/: base-rcnn-bdd100k.yaml  da2od-bdd100k.yaml
DA2OD/configs/cityscapes/: base-rcnn-cityscapes.yaml  da2od-cityscapes.yaml
DA2OD/configs/hazydet/: base-rcnn-hazydet-hazy.yaml  base-rcnn-hazydet.yaml  da2od-hazydet-hazy.yaml  da2od-hazydet.yaml  da2od-rddts.yaml
DA2OD/configs/sim10k/: base-rcnn-sim10k.yaml  da2od-sim10k.yaml
DA2OD/configs/uitdrone/: base-rcnn-uitdrone.yaml  da2od-uitdrone.yaml
DA2OD/da2od/: checkpoint.py  datasets.py
DA2OD/da2od.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DA2OD/docs/: DATASETS.md
DA2OD/tools/: train_net.py
DATR/: engine.py  inference_ema_model.py  main.py  main_teacher.py
DATR/datasets/: DAcoco.py  __init__.py  coco_eval.py
FAT/: .gitignore  README.md  fm.py  predict.py  train_brun_in.py  train_foggy.py  val.py  val_burn_in.py  vis.py
HFDNet/: README.md  detect.py  distill.py  export.py  gap.py  get_FPS.py  heatmap.py  pca.py  train.py  val.py  vis.py
HFDNet/gap/: gap.py  (+11 more)
SF_TMAT/: README.md  build_modules.py  collect_feature.py  engine.py  main.py  requirements.txt  tsne.py  visualize_feature_map.py
SIGMA/: NMS.py  mAP.py  structure.txt  visualize.py
VersatileTeacher/: requirements.txt  train.py  val.py
(+116 files in other folders)
